<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FormDaftar</class>
 <widget class="QWidget" name="FormDaftar">
  <property name="geometry"> <rect> <x>0</x> <y>0</y> <width>700</width> <height>600</height> </rect> </property>
  <property name="windowTitle"> <string>Form Pendaftaran</string> </property>
  <widget class="QWidget" name="formLayoutWidget">
   <property name="geometry"> <rect> <x>50</x> <y>20</y> <width>450</width> <height>200</height> </rect> </property>
   <layout class="QFormLayout" name="formLayout">
    <item row="0" column="0"><widget class="QLabel" name="l1"><property name="text"><string>No Pendaftaran</string></property></widget></item>
    <item row="0" column="1"><widget class="QLineEdit" name="editNoDaftar"/></item>
    <item row="1" column="0"><widget class="QLabel" name="l2"><property name="text"><string>ID Admin</string></property></widget></item>
    <item row="1" column="1"><widget class="QLineEdit" name="editIDAdmin"/></item>
    <item row="2" column="0"><widget class="QLabel" name="l3"><property name="text"><string>Kode Kelurahan</string></property></widget></item>
    <item row="2" column="1"><widget class="QLineEdit" name="editKodeKel"/></item>
    <item row="3" column="0"><widget class="QLabel" name="l4"><property name="text"><string>Tgl Pendaftaran</string></property></widget></item>
    <item row="3" column="1"><widget class="QLineEdit" name="editTglDaftar"/></item>
    <item row="4" column="0"><widget class="QLabel" name="l5"><property name="text"><string>Tgl Pernikahan</string></property></widget></item>
    <item row="4" column="1"><widget class="QLineEdit" name="editTglNikah"/></item>
    <item row="5" column="0"><widget class="QLabel" name="l6"><property name="text"><string>Status</string></property></widget></item>
    <item row="5" column="1"><widget class="QLineEdit" name="editStatus"/></item>
   </layout>
  </widget>
  <widget class="QPushButton" name="btnSimpan"> <property name="geometry"> <rect> <x>60</x> <y>240</y> <width>90</width> <height>29</height> </rect> </property> <property name="text"> <string>Simpan</string> </property> </widget>
  <widget class="QPushButton" name="btnHapus"> <property name="geometry"> <rect> <x>170</x> <y>240</y> <width>90</width> <height>29</height> </rect> </property> <property name="text"> <string>Hapus</string> </property> </widget>
  <widget class="QPushButton" name="btnUbah"> <property name="geometry"> <rect> <x>280</x> <y>240</y> <width>90</width> <height>29</height> </rect> </property> <property name="text"> <string>Ubah</string> </property> </widget>
  <widget class="QPushButton" name="btnBersih"> <property name="geometry"> <rect> <x>390</x> <y>240</y> <width>90</width> <height>29</height> </rect> </property> <property name="text"> <string>Bersih</string> </property> </widget>
  <widget class="QTableWidget" name="tabelDaftar">
   <property name="geometry"> <rect> <x>50</x> <y>290</y> <width>600</width> <height>250</height> </rect> </property>
   <column><property name="text"><string>No Daftar</string></property></column>
   <column><property name="text"><string>ID Admin</string></property></column>
   <column><property name="text"><string>Tgl Nikah</string></property></column>
   <column><property name="text"><string>Status</string></property></column>
  </widget>
 </widget>
 <resources/> <connections/>
</ui>
